grammar.ebnf
function_definition =
program  = {function_definition | expression | statement};
identifier  = number | {a-z | A-Z | 0-9};
number  = {0-9};
boolean  = "true" | "false";
string  = '"', {}, '"';
function_call  = identifier, "(", arg_list, ")";
arg_list = identifier, arg_list | ",", arg_list | e;
parenthetical_expression  = "(", expression, ")"
l4  =
l3_infix  =
l3  =
l2_infix  =
l2  =
l1_infix  =
l1  =
math_expression  = number, [{" "}], ("+" | "-" | "*" | "/"), [{" "}], number;
expression  = string | boolean | function_call | math_expression | number | identifier
statement  = variable_define | function_return
function_return  =
variable_define  = 
arguments  =
other_arg  =
comment  =
